bugfix riff panel overlap footer
height on edit-riff-panel was set to 33px -- deleted that line
everything fixed! Now lets make sure everything still works and redeploy

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -127,7 +127,6 @@ ul {
 }
 
 .edit-riff-panel {
-  height: 33px;
   margin-top: 2px;
   width: calc(100% - 52.5px);
 
@@ -143,6 +142,12 @@ ul {
 .flag-riff-button {
   clear: both;
   height: 31px;
+}
+
+.footer-comp {
+  clear: both;
+  position: relative;
+
 }
 
 .navbar-form {
